@startuml

entity Company {
    Id : Guid
    --
    GameConsoles : ICollection<GameConsole>
    ' CompanyKeyCodePlaceholder
    --
    IsTest : bool
    Name : string
    ' CompanyPropertyCodePlaceholder
}

entity Emulator {
    Id : Guid
    --
    EmulatorCores : ICollection<EmulatorCore>
    ' EmulatorKeyCodePlaceholder
    --
    IsTest : bool
    Name : string
    ' EmulatorPropertyCodePlaceholder
}

entity EmulatorCore {
    Id : Guid
    --
    Emulator : Emulator
    PlaySessions : ICollection<PlaySession>
    ' EmulatorCoreKeyCodePlaceholder
    --
    IsTest : bool
    Name : string
    ' EmulatorCorePropertyCodePlaceholder
}

entity GameConsole {
    Id : Guid
    --
    Company : Company
    Roms : ICollection<Rom>
    ' GameConsoleKeyCodePlaceholder
    --
    Code : string
    IsTest : bool
    Name : string
    ' GameConsolePropertyCodePlaceholder
}

entity Language {
    Id : Guid
    --
    ' LanguageKeyCodePlaceholder
    --
    IsTest : bool
    Name : string
    Native : string
    ' LanguagePropertyCodePlaceholder
}

entity PlaySession {
    Id : Guid
    --
    EmulatorCore : EmulatorCore
    Rom : Rom
    ' PlaySessionKeyCodePlaceholder
    --
    EndDateTime : DateTime
    IsTest : bool
    StartDateTime : DateTime
    ' PlaySessionPropertyCodePlaceholder
}

entity Rom {
    Id : Guid
    --
    GameConsole : GameConsole
    PlaySessions : ICollection<PlaySession>
    WebSite : WebSite
    WebSiteSubcategory : WebSiteSubcategory
    ' RomKeyCodePlaceholder
    --
    FileName : string
    IsTest : bool
    Sha256Sum : string
    ' RomPropertyCodePlaceholder
}

entity RomInput {
    Id : Guid
    --
    RomTransitions : ICollection<RomTransition>
    ' RomInputKeyCodePlaceholder
    --
    IsTest : bool
    Name : string
    ' RomInputPropertyCodePlaceholder
}

entity RomState {
    Id : Guid
    --
    RomTexts : ICollection<RomText>
    PreviousRomTransitions : ICollection<RomTransition>
    RomTransitions : ICollection<RomTransition>
    ' RomStateKeyCodePlaceholder
    --
    IsTest : bool
    Name : string
    T : int
    X : int
    Y : int
    Z : int
    ' RomStatePropertyCodePlaceholder
}

entity RomText {
    Id : Guid
    --
    RomState : RomState
    ' RomTextKeyCodePlaceholder
    --
    IsTest : bool
    Text : string
    ' RomTextPropertyCodePlaceholder
}

entity RomTransition {
    Id : Guid
    --
    PreviousRomState : RomState
    RomInput : RomInput
    RomState : RomState
    ' RomTransitionKeyCodePlaceholder
    --
    IsTest : bool
    ' RomTransitionPropertyCodePlaceholder
}

entity WebSite {
    Id : Guid
    --
    Roms : ICollection<Rom>
    WebSiteCategories : ICollection<WebSiteCategory>
    WebSiteSubcategories : ICollection<WebSiteSubcategory>
    ' WebSiteKeyCodePlaceholder
    --
    IsTest : bool
    Name : string
    Url : string
    ' WebSitePropertyCodePlaceholder
}

entity WebSiteCategory {
    Id : Guid
    --
    WebSite : WebSite
    WebSiteSubcategories : ICollection<WebSiteSubcategory>
    ' WebSiteCategoryKeyCodePlaceholder
    --
    IsTest : bool
    Name : string
    ' WebSiteCategoryPropertyCodePlaceholder
}

entity WebSiteSubcategory {
    Id : Guid
    --
    Roms : ICollection<Rom>
    WebSite : WebSite
    WebSiteCategory : WebSiteCategory
    ' WebSiteSubcategoryKeyCodePlaceholder
    --
    IsTest : bool
    Name : string
    ' WebSiteSubcategoryPropertyCodePlaceholder
}

' EntityCodePlaceholder

EmulatorCore }o--o| Emulator
GameConsole }o--o| Company
PlaySession }o--o| EmulatorCore
PlaySession }o--o| Rom
Rom }o--o| GameConsole
Rom }o--o| WebSite
Rom }o--o| WebSiteSubcategory
RomText }o--o| RomState
RomTransition }o--o| RomState
RomTransition }o--o| RomInput
RomTransition }o--o| RomState
WebSiteCategory }o--o| WebSite
WebSiteSubcategory }o--o| WebSite
WebSiteSubcategory }o--o| WebSiteCategory
' RelationshipCodePlaceholder

@enduml
